--- a/base/templates/dashboard.html
+++ b/base/templates/dashboard.html
@@ -1,11 +1,11 @@
 {% extends "base/base.html" %}
 
 {% load static %}
-{% block title %}Accueil{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block css %}
 <style>
-    #categories-chart {
+    #products-chart {
         width: 100%;
         height: 400px;
     }
@@ -27,62 +27,9 @@
 {% endblock %}
 
 {% block content %}
-<div id="categories-chart"></div>
+
 {% endblock content %}
 
 {% block javascript %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const ctx = document.getElementById('categories-chart').getContext('2d');
-        const categories = {{ categories|safe }};
-        
-        const data = {
-            labels: categories.map(cat => cat.nom_cat),
-            datasets: [{
-                label: 'Nombre de Produits par Catégorie',
-                data: categories.map(cat => cat.product_count),
-                borderColor: '#36A2EB',
-                backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                fill: false,
-                tension: 0.1
-            }]
-        };
 
-        new Chart(ctx, {
-            type: 'line',
-            data: data,
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true
-                    },
-                    tooltip: {
-                        callbacks: {
-                            label: function(tooltipItem) {
-                                return tooltipItem.label + ': ' + tooltipItem.raw + ' produits';
-                            }
-                        }
-                    }
-                },
-                scales: {
-                    x: {
-                        title: {
-                            display: true,
-                            text: 'Catégorie'
-                        }
-                    },
-                    y: {
-                        title: {
-                            display: true,
-                            text: 'Nombre de Produits'
-                        },
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    });
-</script>
 {% endblock %}
