--- a/stock/templates/liste_util.html
+++ b/stock/templates/liste_util.html
@@ -42,7 +42,9 @@
             {% endfor %}
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Filtrer</button>
+    <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Filtrer</button>
+    </div>
 </form>
 
 <table class="table mt-4">
