--- a/stock/templates/produit.html
+++ b/stock/templates/produit.html
@@ -76,8 +76,10 @@
             {% endfor %}
         </select>
     </div>
+    <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Ajouter</button>
+    </div>
     
-    <button type="submit" class="btn btn-primary">Ajouter</button>
 </form>
 
 
