--- a/stock/templates/utilisateur.html
+++ b/stock/templates/utilisateur.html
@@ -44,7 +44,9 @@
             {% endfor %}
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Ajouter</button>
+    <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Ajouter</button>
+    </div>
 </form>
 
 {% if success_message %}
